<resources>
    <string name="app_name" translatable="false">RickAndMorty</string>
    <string name="information">Information</string>
    <string name="home">Home</string>
    <string name="database">Database</string>
    <string name="species">Species: %s</string>
    <string name="gender">Gender: %s</string>
    <string name="status">Status: %s</string>
    <string name="history">History</string>
    <string name="list_of_episodes"><u>List of episodes:</u></string>
    <string name="location_name">Name: %s</string>
    <string name="location_type">Type: %s</string>
    <string name="location_dimension">Dimension: %s</string>
    <string name="dash" translatable="false">%s - %s</string>
    <string name="locations">Locations</string>
    <string name="search">Search</string>
    <string name="dark_mode">Night Mode</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="character_list">Characters</string>
    <string name="character_details">Character Details</string>
    <string name="character_place">Characters in this place</string>
    <string name="favourite_list">Favourite list</string>
    <string name="map">Map</string>
    <string name="query_search">Enter your request</string>

    <!--  Info messages  -->
    <string name="info_search">Click on the search button and enter your request to find characters by name</string>
    <string name="info_language">Select a language from the list to change the localization</string>
    <string name="info_list">Click on a character in the list to see more information about him</string>
    <string name="info_location">Click on the location to see a list of characters who have been there</string>
    <string name="info_room">This is a list of favourite characters uploaded to a local database.
        Click on a character in the list to see more information about him</string>
    <string name="info_settings">This is the settings menu.
        Here you can enable the NightMode and change the language.</string>
    <string name="toast_favourite">Favourite List has been updated</string>
    <string name="toast_error_query">Nothing was found for this query</string>


    <!--  Map Marker Info  -->
    <string name="latitude" translatable="false">Latitude:</string>
    <string name="capital" translatable="false">Capital:</string>
    <string name="longtitude" translatable="false">Longtitude:</string>
    <string name="country" translatable="false">Country:</string>


</resources>