<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/list"
        android:enabled="true"
        android:icon="@drawable/ic_characters"
        android:title="@string/character_list" />


    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search" />

    <item
        android:id="@+id/locations"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/locations" />
    <item
        android:id="@+id/map"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/map" />

    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
</menu>