<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/info_button"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="ifRoom"
        android:title="@string/information" />

    <item
        android:id="@+id/history"
        android:icon="@android:drawable/ic_menu_recent_history"
        app:showAsAction="ifRoom"
        android:title="@string/history" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"
        />
</menu>