<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/language_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue_500"
        app:menu="@menu/menu_info"
        app:title="@string/language"
        app:titleTextColor="@color/white" />

    <RadioGroup
        android:id="@+id/radiogroup_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_english"
                style="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:padding="18dp"
                android:text="@string/english"
                android:textSize="22sp" />


            <RadioButton
                android:id="@+id/radio_button_russian"
                style="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:padding="18dp"
                android:text="@string/russian"
                android:textSize="22sp" />

    </RadioGroup>
</LinearLayout>