<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue_500"
        app:menu="@menu/menu_info"
        app:title="@string/settings"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_nightMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp">

        <Switch
            android:id="@+id/darkModeSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:text="@string/dark_mode"
            android:textSize="22sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp">

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:id="@+id/language_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/language"
            android:textSize="22sp" />
    </androidx.cardview.widget.CardView>

</LinearLayout>