<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimaryVariant"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:textColor="@color/white"
        android:id="@+id/country_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/country"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/longtitude"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_name" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/longitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/longitude_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/longitude_label"
        app:layout_constraintTop_toTopOf="@+id/longitude_label" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/latitude_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/capital_label"
        app:layout_constraintEnd_toEndOf="@+id/longitude_label"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/longitude_label"
        app:layout_constraintTop_toBottomOf="@+id/longitude_label" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/latitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/latitude_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/latitude_label"
        app:layout_constraintTop_toTopOf="@id/latitude_label" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/capital_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/capital"
        android:textSize="16sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/latitude_label"
        app:layout_constraintStart_toStartOf="@+id/latitude_label"
        app:layout_constraintTop_toBottomOf="@+id/latitude_label" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/capital"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/capital_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/latitude_label"
        app:layout_constraintTop_toTopOf="@+id/capital_label" />

</androidx.constraintlayout.widget.ConstraintLayout>